<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/language"
        android:contentDescription="@string/support_languages"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/support_languages"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/map"
        android:contentDescription="@string/map"
        android:icon="@drawable/map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/preview"
        android:contentDescription="@string/preview_images"
        android:icon="@drawable/baseline_collections_24"
        android:title="@string/preview_images"
        app:showAsAction="ifRoom" />

</menu>